# RayTracer

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
res/: compute.glsl
src/: main.cpp
src/Engine/: Shader.cpp  Shader.hpp  ShaderProgram.hpp
